Corrección compatibilidad Java 8